--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-Flask==2.2.3
-numpy==1.23.5
-plotly==5.9.0
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==2.1.1
+setuptools==75.1.0
+Werkzeug==3.0.4
+wheel==0.44.0
